<resources>
    <string name="app_name">New York Times Search</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="article_image">Article Image</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="action_filter">Filter Search</string>
    <string name="title_activity_filter">FilterActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="sort_order_prompt">Select Sort Order</string>
    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_fashion"><![CDATA[Fashion & Style]]></string>
    <string name="checkbox_sports">Sports</string>
    <string name="save">Save</string>
</resources>
