<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.codepath.newyorktimessearch.activities.FilterActivity"
    tools:showIn="@layout/activity_filter">

    <TextView
        android:text="@string/begin_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvDate"
        android:layout_alignBottom="@+id/etDate"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:id="@+id/etDate"
        android:onClick="onDatePick"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvDate"
        android:layout_toEndOf="@+id/tvDate"/>

    <TextView
        android:text="@string/sort_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvSort"
        android:layout_alignBottom="@+id/spSort"
        android:layout_toLeftOf="@+id/etDate"
        android:layout_toStartOf="@+id/etDate"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spSort"
        android:layout_below="@+id/etDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvDate"
        android:layout_toEndOf="@+id/tvDate"
        android:entries="@array/sort_order_array"
        android:prompt="@string/sort_order_prompt"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:layout_toLeftOf="@+id/spSort"
        android:layout_toStartOf="@+id/spSort"/>

    <CheckBox
        android:text="@string/checkbox_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSort"
        android:layout_toRightOf="@+id/tvSort"
        android:layout_toEndOf="@+id/tvSort"
        android:id="@+id/cbArts"/>

    <CheckBox
        android:text="@string/checkbox_fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbArts"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        android:id="@+id/cbFashion"/>

    <CheckBox
        android:text="@string/checkbox_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbFashion"
        android:layout_alignLeft="@+id/cbFashion"
        android:layout_alignStart="@+id/cbFashion"
        android:id="@+id/cbSports"/>

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/cbArts"
        android:layout_toEndOf="@+id/cbArts"
        android:id="@+id/btnSave"
        android:onClick="onSave"/>
</RelativeLayout>
